[project]
name = "penance-hunter"
version = "0.1.0"
description = "export and vizualization for Penance tracking in Warhammer 40,000: Darktide"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "marimo[mcp]>=0.17.0",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyfiglet>=1.0.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
